# Clonr-AI-Characters

./: .env.example  .flake8  .gitignore  Makefile  README.md  clone_collector.py  clone_curation.py  compile_proto.sh  docker-compose.yml  locustfile.py  nb.ipynb  populate_db.py  pyproject.toml  test.py  testing.ipynb  wip-clone-flow.py
.github/workflows/: app.yml  python-app.yml
assets/: lebron-wiki.txt  makima-description-calls.json
assets/example-fandom-scrapes/: Amiya_arknights.txt  Angie Yonaga_danganronpa.txt  Homer Simpson_the-simpsons.txt  Hu Tao_genshin-impact.txt  Juri Han_street-fighter.txt  Klee_genshin-impact.txt  Lisa_genshin-impact.txt  Ryuko Matoi_kill-la-kill.txt  Skadi_arknights.txt
assets/quotes/: Isekai narrator_You got reincarnated into a fantasy world..txt  Psychologist_Someone who helps with life difficulties.txt  Raiden Shogun and Ei_From Genshin Impact.txt
backend/: .env.dev  Dockerfile  README.md  _nb.ipynb  alembic.ini  demo.ipynb  lint.sh  populate_db.py  pyproject.toml  run_tests.sh  test.py  test_stripe.py
backend/app/: character.py  db.py  elevenlabs.py  embedding.py  main.py  models.py  schemas.py  settings.py  tracing.py  users.py  utils.py
backend/app/api/: __init__.py  _api_keys.py  _conversations.py  _voice.py  api_keys.py  clones.py  conversations.py  creator_signups.py  creators.py  documents.py  example_dialogues.py  facts.py  memories.py  messages.py  nsfw_signups.py  reflections.py  signups.py  statistics.py  stripe.py  subscriptions.py  tags.py  users.py  voice.py
backend/app/auth/: api_keys.py  csrf.py  email.py  jwt.py  users.py
backend/app/clone/: cache.py  clonedb.py  controller.py  db.py  dependencies.py  retrieval.py  shared.py  types.py
backend/app/db/: __init__.py  cache.py  db.py  events.py
backend/app/integrations/discord/: bot.py
backend/app/integrations/discord/cogs/: general.py
backend/app/middleware/: rate_limiter.py  tracing.py
backend/app/modules/: base.py  description.py  example_dialogue.py  fact.py  memory.py  motivation.py  reflection.py
backend/clonr/: _grammar.py  clone.py  data_structures.py  generate.py  index.py  templates.py  text_splitters.py  tokenizer.py
backend/clonr/data/: icebreakers.py
backend/clonr/data/parsers/: __init__.py  base.py  facebook.py  fandom.py  instagram.py  reddit.py  twitter.py  web.py  wiki.py  wikiquotes.py  yt_transcript.py
backend/clonr/embedding/: __init__.py  encoder.py  export_to_onnx.py  types.py
backend/clonr/llms/: __init__.py  base.py  callbacks.py  llama_cpp.py  mock.py  openai.py  schemas.py
backend/clonr/templates/: __init__.py  _env.py  agent_summary.py  base.py  entity_relationship.py  instruct.py  long_description.py  memory.py  message.py  reflection.py  summarize.py
backend/clonr/utils/: __init__.py  formatting.py  hf_downloader.py  paths.py  trie.py
backend/data/parsers/: base.py  web.py  wiki.py  yt_transcript.py
backend/integration_tests/: conftest.py  makima.json  obama-document.txt  obama.json  test_long_term_mem_convo.py  test_short_term_mem_convo.py  test_zero_mem_convo.py
backend/migrations/: env.py
backend/migrations/versions/: e9eb5c6aa0dc_init.py
backend/tests/: __init__.py  conftest.py  makima.json  test_clones.py  test_conversations.py  test_creators.py  test_documents.py  test_embeddings.py  test_external.py  test_long_descriptions.py  test_monologues.py  test_tags  test_tokenizer.py  test_users.py  test_utils.py  test_zero_mem_convo.py  types.py
backend/tests/api/: conftest.py  test_clones.py  test_conversations.py  test_creators.py  test_documents.py  test_long_descriptions.py  test_monologues.py  test_tags.py
backend/tests/auth/: test_csrf.py
backend/tests/clonr/: test_text_splitters.py
clonr/: README.md  clone.py  data_structures.py  elevenlabs.py  embeddings.py  generate.py  index.py  retrieval.py  storage.py  text_splitters.py  tokenizer.py  utils.py
clonr/data/: __init__.py  data_structures.py  load_examples.py
clonr/data/assets/: makima.txt  (+2 more)
clonr/data_structures/: document.py
clonr/embedding/: __init__.py  encoder.py
clonr/examples/: makima.ipynb
clonr/llms/: __init__.py  base.py  callbacks.py  llama_cpp.py  mock.py  openai.py  schemas.py
clonr/parsers/: __init__.py  base.py  web.py  wiki.py  yt_transcript.py
clonr/processing/: index.py  utils.py
clonr/storage/: __init__.py  cache.py  relational.py  vector.py
clonr/templates/: __init__.py  agent_summary.py  character_description.py  entity_relationship.py  instruct.py  memory.py  message.py  qa.py  reflection.py  summarize.py
clonr/tests/: test_text_splitters.py
clonr/utils/: __init__.py  formatting.py  hf_downloader.py  paths.py  shared.py  trie.py
db/: Dockerfile  initdb.sql
embedding/: Dockerfile  README.md  client.py  embed_pb2.py  embed_pb2.pyi  embed_pb2_grpc.py  lint.sh  pyproject.toml  server.py
embedding/app/: interceptors.py  server.py  tracing.py
embedding/app/encoder/: __init__.py  encoder.py  export_to_onnx.py  utils.py
embedding/encoder/: __init__.py  encoder.py  export_to_onnx.py  types.py  utils.py
embedding/server/: export_to_onnx.py  server.py  utils.py
frontend/: README.md  dev.Dockerfile  fix.ts  generate_client.sh  global.d.ts  next.config.js  package-lock.json  package.json  prod.Dockerfile  tailwind.config.js  tsconfig.json
frontend/src/: fix.ts  middleware.ts
llama_cpp_server/: README.md  launch.sh  pyproject.toml
llama_cpp_server/app/: main.py  schemas.py
llm_server/: Dockerfile  README.md  pyproject.toml  test.py
llm_server/app/: api.py  llm.py  main.py  schemas.py  settings.py  utils.py
proto/: embed.proto
scrapers/: botprompts.py  characterai.py  characterai_utils.py  charstarai.py  chubai.py  clean_dialogues.py  clone_gen_utils.py  janitorai.py  schema.py  spicychatai.py
scrapers/scrape-cleaners/: README.md  bot_filter.py  db.py  doc-scrape.py  filter_chub.py  scrape_final.py
server/: Dockerfile  pyproject.toml
server/app/: db.py  elevenlabs.py  gcp.py  main.py  models.py  schemas.py  settings.py
server/app/api/: __init__.py  clones.py  documents.py  users.py
(+229 files in other folders)
