[tool.poetry]
name = "clonr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
playsound = "1.2.2"
python-dotenv = "^1.0.0"
elevenlabs = "^0.2.15"
sqlalchemy = "^2.0.14"
loguru = "^0.7.0"
tenacity = "^8.2.2"
tiktoken = "^0.4.0"
pydantic = "^1.10.8"
openai = "^0.27.7"
trafilatura = "^1.6.0"

[tool.poetry.dev-dependencies]
mypy = "^1.3.0"
isort = "^5.12.0"
black = "^23.3.0"
pytest = "^7.3.1"
flake8 = "^6.0.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
