[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.0"
uvicorn = "^0.22.0"
loguru = "^0.7.0"
python-dotenv = "^1.0.0"
pydantic = "^2.1.1"
SQLAlchemy = "^2.0.13"
tenacity = "^8.2.2"
asyncpg = "^0.27.0"
fastapi-users = "^11.0.0"
fastapi-users-db-sqlalchemy = "^5.0.0"
httpx-oauth = "^0.11.2"
elevenlabs = "^0.2.16"
alembic = "^1.11.1"
redis = "^4.5.5"
randomname = "^0.2.1"
python-dateutil = "^2.8.2"
websockets = "^11.0.3"
pgvector = "^0.1.8"
discord = "^2.3.0"
openai = "^0.27.8"
tiktoken = "^0.4.0"
slowapi = "^0.1.8"
grpcio = "^1.56.0"
grpcio-tools = "^1.56.2"
opentelemetry-instrumentation-fastapi = "^0.40b0"
sentry-sdk = {extras = ["fastapi"], version = "^1.28.1"}
opentelemetry-instrumentation-sqlalchemy = "^0.40b0"
transformers = "^4.31.0"
jinja2 = "^3.1.2"
nltk = "^3.8.1"
pydantic-settings = "^2.0.2"
stripe = "^5.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
psycopg2-binary = "^2.9.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
