[tool.poetry]
name = "embedding"
version = "0.1.0"
description = ""
authors = ["Jonny Kernes <jmkernes@g.ucla.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.56.0"
optimum = "^1.9.1"
onnxruntime = "^1.15.1"
loguru = "^0.7.0"
transformers = "^4.31.0"
pydantic = "^2.0.3"
fire = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
