[tool.poetry]
name = "llm_server"
version = "0.1.0"
description = ""
authors = ["Jonny Kernes <jmkernes@ucla.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
anyio = "^3.7.0"
uvicorn = "^0.22.0"
pydantic = "^1.10.8"
sse-starlette = "^1.6.1"
loguru = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
